# Markify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cursor Installation - User PowerShell.ps1  Default.code-workspace  JDA - API Questions.txt  KillMSAccess.bat  LICENSE  Markify.code-workspace  Power BI Prompt Master.code-workspace  README.md  ROADMAP.md  Sync-DVCoE.ps1  Task Tracker.py  VB - Refresh Data and Pivots.vb  desktop.ini  dns_after.txt  dns_before.txt  pyproject.toml  refresh_optimization_suggestions.md  tasks.json
.github/: PULL_REQUEST_TEMPLATE.md
Batch/: Compact and Repair.bat  MSAccess Copy.bat  copy_tns.bat  oracle_instantclient_10_2.bat
Copilot/: Copilot ConversationStart - With Buttons.yaml  Copilot.yaml  Instructions.md  SYNC_TEST.md  VizBot-Agent-Instructions.md  sharepoint-reindex-guide.md  top20_measures_export.py
Other/: Google Maps API Distance.txt  KCC JSON Theme Palette.json  Meeting Notes.txt  VB - Refresh All Queries Connections and Pivots.vb  mdlSendEmail.vb  tnsnames.ora
PowerQuery/: Business Day Function.pq  Date Table Dataflow.pq
Python/: Coyote API.py  Cursor Install.py  Delete File.py  Get CDC COVID by County Data.py  Lane Forecast.py  Load Level Data.py  Loop Folder File Copy.py  Move Mouse.py  Pandas - MSSQL Template.py  Pandas Loop Excel and Push Final Dataframe to File.py  Stock Correlation.py  USBank.py  USKVAP32 Cryptography.py  WMS Data.py  Warehouse IDs.py
SAS/: 2019 Freight Spend Detail.sas  Lynlee Daily Freight Expenditures.sas  RFT Data.sas  SAS Training Example.sas  Untitled-1.sas
SQL/: !To Do.txt  Bid App Add And Update.sql  DV CoE - ServiceNow Tickets.sql  DV CoE - Snowmirror - Unions - CTE.sql  DV CoE - Support Incident Tickets.sql  DV CoE - Support Request Tickets.sql  Docusign API Python Example.py  MSSQL - Actual Load Detail Aggregate New.sql  MSSQL - Actual Load Detail Aggregate.sql  MSSQL - Award Lanes to Actuals Compare.sql  MSSQL - Award Weighted Averages.sql  MSSQL - Bid App - Outlier.sql  (+97 more)
(+542 files in other folders)
